--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-flash": "^0.1.1",
     "consolidate": "^0.14.5",
     "cookie-parser": "^1.4.3",
+    "cors": "^2.8.3",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
     "method-override": "^2.3.8",
