--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "cors": "^2.8.3",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
+    "jsonwebtoken": "^7.4.0",
     "method-override": "^2.3.8",
     "money": "^0.2.0",
     "mongoose": "^4.9.4",
     "nunjucks": "^3.0.0",
-    "open-exchange-rates": "^0.3.0"
+    "open-exchange-rates": "^0.3.0",
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.2.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
