--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "method-override": "^2.3.8",
     "money": "^0.2.0",
     "mongoose": "^4.9.4",
+    "nodemon": "^1.11.0",
     "nunjucks": "^3.0.0",
     "open-exchange-rates": "^0.3.0",
     "passport": "^0.3.2",
